Fix card hover background. Change method of fetching and displaying blocks pools. Add title and tooltip for pools table. Fix set snap page error when operating on small screens

--- a/cmd/dcrdata/public/scss/home.scss
+++ b/cmd/dcrdata/public/scss/home.scss
@@ -925,10 +925,13 @@
   background-color: #eaf0f5;
   border-top-left-radius: 10px;
   border-top-right-radius: 10px;
+
+  .new-home-card-header:hover {
+    background-color: #d7e5f0;
+  }
 }
 
-.link-to-subpage:hover,
-.link-to-subpage.new-home-card-header:hover {
+.link-to-subpage:hover {
   background-color: #d7e5f0;
 }
 
@@ -966,6 +969,10 @@ body.darkBG.homepage-body {
 
   .link-to-subpage {
     background-color: #3f3f3f;
+
+    .new-home-card-header:hover {
+      background-color: #636161;
+    }
   }
 
   .bg-for-header {
@@ -998,8 +1005,7 @@ body.darkBG.homepage-body {
     background-color: white;
   }
 
-  .link-to-subpage:hover,
-  .link-to-subpage.new-home-card-header:hover {
+  .link-to-subpage:hover {
     background-color: #636161;
   }
 
